@@ -8,7 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 @SpringBootTest
 class CategoryRepositoryTest {
@@ -21,7 +21,7 @@ class CategoryRepositoryTest {
 
     @BeforeEach
     void setUp() {
-        testBeer = beerRepository.findAll().get(0);
+        testBeer = beerRepository.findAll().getFirst();
     }
 
     @Transactional
@@ -32,9 +32,11 @@ class CategoryRepositoryTest {
                 .build());
 
         testBeer.addCategory(savedCat);
-        Beer saveBeer = beerRepository.save(testBeer);
+        Beer savedBeer = beerRepository.save(testBeer);
 
-        System.out.println(saveBeer.getBeerName());
+        assertThat(savedBeer.getId()).isNotNull();
+
+        System.out.println(savedBeer.getBeerName());
 
     }
 }
